src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>College_Grade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>College Grade</label>
        <referenceTo>College__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher Relationship</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_of_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year of Class</label>
        <referenceTo>Year_of_Class__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>